# Ollama-Chat-Gpt-OSS

./: .gitignore  README.md
chat-client/: README.md  angular.json  package.json  pnpm-lock.yaml
chat-client/src/: index.html  styles.css
chat-client/src/app/: app.html  app.spec.ts  app.ts  chat-service.ts
chat-client/src/app/chat/: chat.css  chat.html  chat.ts
chat-server/: README.md  pyproject.toml
chat-server/src/: server.py
