[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src"]

[project]
name = "Chat-Server"
version = "0.1.0"
description = "A chat server using Fast API and Ollama "
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Prince Cheruvathur", email = "prncher@gmail.com" },
]
keywords = ["python", "chat-gpt-oss", "http", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]>=0.118.0",
    "mcp>=1.0.0",
    "langchain-ollama>=0.3.0",
    "langchain-core>=0.3.0",
    "markdown>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/prncher/Ollama-Chat-Gpt-Oss"
Repository = "https://github.com/prncher/Ollama-Chat-Gpt-Oss/chat-server"